<resources>
    <string name="app_name">Mercury</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="register_prompt_username">Username</string>
    <string name="register_mercury_info">Mercury is a secure instant messaging service that allows you to connect with friends, family and search for new contacts. You are just a few steps away from entering mercury.</string>
    <string name="register_action_register">Register now</string>
    <string name="register_error_invalid_username_message">Your username must have a length between 5 and 20 characters and can only have latin letters, arabic numbers and underscores.</string>
    <string name="register_username_available">Available</string>
    <string name="register_username_not_available">Taken</string>
    <string name="register_error_while_connecting">Could not connect to server!</string>
    <string name="register_transfer_text">Or transfer from an old device?</string>
    <string name="register_qr_image_content_description">Scan this on your old phone</string>
    <string name="register_username_need">A username is needed for other users to be able to contact you. It will also be shown to other users. It can not be changed later so choose wisely.</string>
    <string name="register_verify_no_robot">Verify that you are not a robot</string>
    <string name="register_agree_privacy_policy">By clicking the below button of register, you agree to our privacy policy.</string>
    <string name="register_see_privacy_policy">Our privacy policy.</string>
    <string name="register_add_profile_picture">Add profile picture</string>
    <string name="register_edit_profile_picture">Edit profile picture</string>
    <string name="register_remove_profile_picture">Remove profile picture</string>
    <string name="register_wait">Please wait…</string>
    <string name="add_contact_username">Username</string>
    <string name="add_contact_add">Add</string>
    <string name="add_contact_existing_user_title">OK!</string>
    <string name="add_contact_existing_user">This user exists!</string>
    <string name="add_contact_not_existing_user_title">Sorry!</string>
    <string name="add_contact_not_existing_user">This user does not exist!</string>
    <string name="add_contact_try_again">Try again!</string>
    <string name="add_contact_proceed">Proceed!</string>
    <string name="new_chat_label">New Chat</string>
    <string name="new_chat_user_activity_label">New User Chat</string>
    <string name="new_chat_group_activity_label">New Group Chat</string>
    <string name="start_chat_user_chat_label">NORMAL</string>
    <string name="start_chat_group_label">GROUP</string>
    <string name="new_chat_search_bar_hint">Search!</string>
    <string name="new_chat_action_search">Search</string>
    <string name="new_chat_start_chat_proceed">Proceed</string>
    <string name="new_chat_start_chat_cancel">Cancel</string>
    <string name="new_chat_start_chat_title">Chat</string>
    <string name="new_chat_start_chat_text">Do you really want to create this chat?</string>
    <string name="new_chat_group_create_action">Create</string>
    <string name="new_chat_group_group_name_hint">Group Name</string>
    <string name="notification_reply_label">REPLY</string>
    <string name="notification_group_invite">%1$s has added you to group %2$s</string>
    <string name="notification_group_modification_change_name">%1$s has changed the group name from %2$s to %3$s</string>
    <string name="notification_group_modification_change_role">%1$s has changed the role of %2$s from %3$s to %4$s</string>
    <string name="notification_amount_messages">%1$s: %2$d message(s)</string>
    <string name="notification_amount_you_have_new_messages">"You have %1$d new messages!</string>
    <string name="notification_voice_message_group_name">%1$s-%2$s: 🎤 Voice message: (%3$ds)</string>
    <string name="notification_voice_message_name">%1$s: 🎤 Voice message: (%2$ds)</string>
    <string name="notification_voice_message">🎤 Voice message: (%1$ds)</string>
    <string name="notification_image_message_group_name">%1$s-%2$s: 🖼 Image</string>
    <string name="notification_image_message_name">%1$s: 🖼 ️Image</string>
    <string name="notification_image_message">🖼️ Image</string>
    <string name="notification_video_message_group_name">%1$s-%2$s: ▶️ Voice message: (%3$ds)</string>
    <string name="notification_video_message_name">%1$s: ▶ ️Voice message: (%2$ds)</string>
    <string name="notification_video_message">▶ ️Voice message: (%1$ds)</string>
    <string name="notification_text_message_group_name">%1$s-%2$s: %3$s</string>
    <string name="notification_text_message_name">%1$s: %2$s</string>
    <string name="notification_text_message">%1$s</string>
    <string name="notification_upload_profile_picture_title">Uploading profile picture</string>
    <string name="notification_upload_profile_picture_text">Your profile picture is being uploaded</string>
    <string name="notification_upload_profile_picture_text_success">Your profile picture has been uploaded successfully.</string>
    <string name="notification_upload_profile_picture_text_failed">Your profile picture has not been uploaded.</string>
    <string name="notification_upload_profile_picture_cancel_upload">Cancel upload</string>
    <string name="notification_download_media_title">Downloading Media</string>
    <string name="notification_download_media_description">Downloading %1$d file(s)</string>
    <string name="notification_download_media_description_failed">Downloading failed.</string>
    <string name="notification_download_media_description_cancel">Cancel download</string>
    <string name="notification_upload_media_title">Uploading Media</string>
    <string name="notification_upload_media_description">Uploading %1$d file(s)</string>
    <string name="notification_upload_media_description_failed">Upload failed.</string>
    <string name="notification_upload_media_description_cancel">Cancel upload</string>
    <string name="notification_initialize_chat_title">Initializing chat</string>
    <string name="notification_initialize_chat_title_description">Please wait…</string>
    <string name="notification_initialize_chat_title_description_failed">Initializing your chat failed. Please try again later.</string>
    <string name="notification_channel_new_messages_name">New messages</string>
    <string name="notification_channel_new_messages_description">This is the notification channel where you receive notifications about messages
    that have been sent to you.</string>
    <string name="notification_channel_upload_profile_picture_name">Upload Profile Picture</string>
    <string name="notification_channel_upload_profile_picture_description">This is the notification channel where you get the notification upload a profile picture upload.</string>
    <string name="notification_channel_upload_media_name">Upload media</string>
    <string name="notification_channel_upload_media_description">This is the notification channel where you get a notification when media is being uploaded.</string>
    <string name="notification_channel_download_media_name">Download media</string>
    <string name="notification_channel_download_media_description">This is the notification channel where you get a notification when media is being downloaded.</string>
    <string name="notification_channel_miscellaneous_name">Miscellaneous</string>
    <string name="notification_channel_miscellaneous_description">This is the notification channel where you get a notification that are rather miscellaneous.</string>
    <string name="chat_info">Chat Info</string>
    <string name="contact_info_edit_alias">Edit Alias</string>
    <string name="contact_info_sent_media">View sent media</string>
    <string name="contact_info_username_label">Username:</string>
    <string name="contact_info_alias_label">Alias:</string>
    <string name="contact_info_label">Contact Info</string>
    <string name="title_activity_start_chat">StartChatActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="new_contact_label">New Contact</string>
    <string name="chat_group_invite_message">You have been added to %1$s</string>
    <string name="title_activity_group_info">GroupInfoActivity</string>
    <string name="chat_group_change_name">%1$s changed the group name from %2$s to %3$s</string>
    <string name="chat_group_change_role">%1$s set %2$s\'s role from %3$s to %4$s</string>
    <string name="chat_group_change_kick_user_no_reason">%1$s was kicked by %2$s</string>
    <string name="chat_group_change_kick_user_with_reason">%1$s was kicked by %2$s for: %3$s</string>
    <string name="chat_group_change_add_user">%1$s was added by %2$s</string>
    <string name="chat_group_no_member">You are no member of this chat</string>
    <string name="chat_group_no_admin">Admin has closed this group!</string>
    <string name="menu_chat_bubble_info_label">Info</string>
    <string name="menu_chat_bubble_delete_label">Delete</string>
    <string name="menu_chat_bubble_copy_label">Copy</string>
    <string name="chat_send_photo">Send Photo</string>
    <string name="chat_send_photo_take_now">Take Photo</string>
    <string name="chat_send_photo_take_gallery">From Gallery</string>
    <string name="chat_send_video">Send Video</string>
    <string name="chat_send_video_take_now">Capture Video</string>
    <string name="chat_send_video_take_gallery">From Gallery</string>
    <string name="chat_user_typing">typing…</string>
    <string name="chat_user_online">online</string>
    <string name="chat_user_offline_exception">Connection Error: %1$s</string>
    <string name="chat_user_offline_closed_today">Online today, %1$s</string>
    <string name="chat_user_offline_closed_yesterday">Online yesterday, %1$s</string>
    <string name="chat_activity_edit_chat_menu_reply">Reply</string>
    <string name="chat_activity_edit_chat_menu_share">Share</string>
    <string name="chat_activity_edit_chat_menu_delete">Delete</string>
    <string name="chat_activity_edit_chat_menu_copy">Copy</string>
    <string name="chat_activity_edit_chat_menu_info">Message information</string>
    <string name="group_info_edit_button_text">Edit Group</string>
    <string name="group_info_add_member_button_text">Add Member</string>
    <string name="group_info_member_list_label">Member List:</string>
    <string name="group_role_moderator">Moderator</string>
    <string name="group_role_default">Default</string>
    <string name="menu_group_member_send_message">Send message</string>
    <string name="menu_group_member_change_role">Change group role</string>
    <string name="menu_group_member_kick">Kick</string>
    <string name="overview_activity_menu_transfer">Transfer</string>
    <string name="overview_activity_menu_chat_backup">Chat Backup</string>
    <string name="overview_activity_menu_chat_backup_create">Create Chat Backup</string>
    <string name="overview_activity_menu_chat_backup_use">Use Chat Backup</string>
    <string name="privacy_policy_recaptcha">By clicking the below shown verify button that leads to the Google-Service of reCAPTCHA you are agreeing to send any data necessary for Google to be processed
        and analyzed for their use. Data can include data about your hardware, software, device and applications. This data can be used by Google to improve their services and security. Data is not used for personalized advertisement.
        Since this operation is not used another time after successfully registering to the mercury services, this agreement can not be revoked. If you do not agree you can quit this window at any time
        and uninstall the application. I understand that this data is used by Google and not by Mercury or their owners. I also agree that my IP-Address will be used by Mercury to verify reCAPTCHA.
    </string>
</resources>