<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.intektor.kentai.ChatActivity">

    <item
        android:id="@+id/actionChatActivityVideo"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/chat_send_video">

        <menu>
            <item
                android:id="@+id/actionChatActivityVideoTakeNow"
                android:title="@string/chat_send_video_take_now" />
            <item
                android:id="@+id/actionChatActivityVideoFromGallery"
                android:title="@string/chat_send_video_take_gallery" />
        </menu>

    </item>


    <item
        android:id="@+id/actionChatActivityPhoto"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/chat_send_photo">
        <menu>
            <item
                android:id="@+id/actionChatActivityPhotoTakeNow"
                android:title="@string/chat_send_photo_take_now" />

            <item
                android:id="@+id/actionChatActivityPhotoFromGallery"
                android:title="@string/chat_send_photo_take_gallery" />
        </menu>
    </item>

    <item
        android:id="@+id/action_chat_info"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/chat_info" />
</menu>